# sciimp

./: .gitignore  CMakeLists.txt  README.md  desc.md
.agent/: GEMINI.md  gsd-file-manifest.json  gsd-install-state.json  settings.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation-build-system/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PLAN.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-minimal-encoder/: 02-03-SUMMARY.md
.planning/phases/03-minimal-player/: 03-01-SUMMARY.md  03-REVIEW.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-compression-pipeline/: 04-01-PLAN.md  04-RESEARCH.md  04-UAT.md  04-VERIFICATION.md
.planning/phases/05-high-fidelity-colors/: 05-01-PLAN.md  05-RESEARCH.md  05-UAT.md  05-VERIFICATION.md  SUMMARY.md
.planning/phases/06-synchronized-audio-playback/: 06-01-PLAN.md  06-RESEARCH.md  06-UAT.md  06-VERIFICATION.md  SUMMARY.md
.planning/phases/07-seeking-scrubbing/: 07-01-PLAN.md  07-RESEARCH.md  SUMMARY.md
.planning/phases/08-compression-optimizations/: SUMMARY.md
.planning/phases/09-character-and-color-stream-separation/: SUMMARY.md
.planning/phases/10-zstd-dictionaries/: SUMMARY.md
.planning/phases/11-palette-compression/: SUMMARY.md
.planning/phases/12-motion-compensation/: SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
include/ascv/: format.hpp
src/encoder/: CMakeLists.txt  EncoderCore.cpp  EncoderCore.hpp  main.cpp
src/player/: CMakeLists.txt  main.cpp  terminal.cpp  terminal.hpp
tests/: test_aspect_ratio.cpp  test_audio.sh  test_encoder.sh  test_player.sh
